# vpsl

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: compiler_settings.cmake  doxygen.cmake  glad.cmake  imgui.cmake  vcpkg.cmake
docs/: Doxyfile.in
include/vp/: builder_interface.hpp  context.hpp  dependency_graph.hpp  error_handling.hpp  shader_code_store.hpp  singleton.hpp  types.hpp  utils.hpp
include/vp/builder_graph/: graph.hpp  interfaces.hpp  node.hpp  objects.hpp  shader_builder.hpp
include/vp/builder_graph/objects/: builder_object_interface.hpp  material_object.hpp  program_object.hpp  shader_object.hpp  texture_object.hpp
include/vp/description/: attribute_description.hpp  buffer_description.hpp  buffer_store.hpp  description_store.hpp  frame_buffer_description.hpp  frame_buffer_store.hpp  options.hpp  program_description.hpp  shader_builder.hpp  shader_code.hpp  shader_code_store.hpp  texture_description.hpp
include/vp/engine/: engine.hpp  execution_node.hpp
include/vp/error_handling/: default_error_reporter.hpp  error_concept.hpp  error_handler.hpp  error_reporter_interface.hpp
include/vp/execution_sequence/: interface.hpp  node.hpp
include/vp/graph/: graph.hpp  graph_interface.hpp
include/vp/graphics/: context_cache.hpp  context_options.hpp  device.hpp  device_builder.hpp  draw_modes.hpp  shader.hpp  vertex.hpp  window.hpp
include/vp/graphics/opengl/: mesh.hpp  object.hpp  program.hpp  shader.hpp  texture.hpp  uniform.hpp  utils.hpp
include/vp/interpreter/: IExpression.hpp  clause.hpp  directive.hpp  interpreter.hpp  lazy.hpp  lexer.hpp  parser.hpp  parser_stages.hpp  shader_table.hpp  token.hpp  token_kind.hpp
include/vp/interpreter/directives/: directive.hpp  directive_base.hpp  directive_interface.hpp  program_directive.hpp  shader_directive.hpp
include/vp/interpreter/v2/: directive_builder.hpp
include/vp/resources/: assimp_processor.hpp  load_request.hpp  material_data.hpp  material_description.hpp  mesh_data.hpp  mesh_description.hpp  mtl_import.hpp  resource_description_store.hpp  resource_kind.hpp  resource_loader.hpp  resource_store.hpp  texture.hpp  texture_description.hpp  thread_pool.hpp
src/: dependency_graph.cpp  main.cpp  shade_code_store.cpp
src/builder_graph/: graph.cpp  shader_builder.cpp  shader_object.cpp
src/description/: attribute_description.cpp  buffer_description.cpp  buffer_store.cpp  frame_buffer_description.cpp  frame_buffer_store.cpp  options.cpp  program_description.cpp  program_description_builder.cpp  shader_builder.cpp  shader_code.cpp  shader_code_store.cpp
src/engine/: engine.cpp  execution_node.cpp
src/error_handling/: default_error_reporter.cpp  error_handler.cpp
src/graphics/: context_cache.cpp  device.cpp  window.cpp
src/graphics/opengl/: mesh.cpp  program.cpp  shader.cpp  texture.cpp  utils.cpp
src/interpreter/: clause.cpp  dependency_graph.cpp  directive.cpp  interpreter.cpp  lexer.cpp  parser.cpp  shader_table.cpp  token.cpp  token_kind.cpp
src/resources/: assimp_processor.cpp  material_data.cpp  mesh_data.cpp  mtl_import.cpp  resource_kind.cpp  resource_loader.cpp  resource_store.cpp  texture.cpp  thread_pool.cpp
tests/: CMakeLists.txt  example.vpsl  mvp.vpsl  simple_shader.vpsl  test_dependency_graph.cpp  test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_shader_store.cpp  test_shader_table.cpp  test_utils.cpp
tests/builder_graph/: shader_object.cpp
tests/description/: test_attribute_description.cpp  test_buffer_description.cpp  test_buffer_store.cpp  test_description_store.cpp  test_options.cpp  test_program_description.cpp  test_program_description_builder.cpp  test_shader_code.cpp  test_shader_store.cpp
tests/directives/: test_directive.cpp  test_directive_builder.cpp  test_shader_directive.cpp
tests/examples/: copyin.vpsl  cyclic.vpsl  include_example.vpsl  include_two.vpsl  load_mesh.vpsl  load_texture.vpsl  load_with_store.vpsl  option.vpsl  simple_triangle.vpsl  simple_unnamed_triangle.vpsl  tesselation_shader.vpsl  two_programs.vpsl  wrong_material_file_type.vpsl  wrong_mesh_file_type.vpsl  wrong_path_to_resource.vpsl  wrong_texture_file_type.vpsl
tests/examples/include_example/: another.vpsl  code.vpsl
tests/graphics/: test_context.cpp
tests/interpreter/: test_clause.cpp  test_interpreter.cpp  test_lexer.cpp  test_parser.cpp  test_token.cpp  test_token_kind.cpp
tests/resources/: test_material_data.cpp  test_mesh_data.cpp  test_mtl_import.cpp  test_resource_kind.cpp  test_texture.cpp
